# 2dgs-nerfstudio

./: LICENSE  pyproject.toml
splatfacto_2dgs/: config.py  model.py
