[project]
name = "splatfacto-2dgs"
description = "2D Gaussian Splatting"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["splatfacto_2dgs*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
splatfacto-2dgs = 'splatfacto_2dgs.config:splatfacto_2dgs'
